fix alignment of help text on favorites page

--- a/scss/imports/custom.scss
+++ b/scss/imports/custom.scss
@@ -320,3 +320,6 @@ i.icon-image {
     margin-top:  12px;
     margin-left: 12px;
 }
+.text-right {
+    text-align: right;
+}
